add svg imgs, add score dom manipulation for player 1

--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
   margin: 1rem;
   font-family: "Pacifico", sans-serif;
 }
+
+.title-img {
+  width: 100px;
+  height: auto;
+  margin: 0;
+}
 .game-score {
   display: flex;
   justify-content: center;
